@@ -917,12 +917,6 @@ $CONFIG['TABLE_DICT']          = $CONFIG['TABLE_PREFIX'].'dict';</textarea>
     </td>
   </tr>
   <tr>
-    <td valign="top" class="tableb tableb_alternate"><strong>owner_name</strong></td>
-    <td valign="top" class="tableb tableb_alternate">Text (<=40 chars)</td>
-    <td valign="top" class="tableb tableb_alternate">The name of the user who uploaded this file.</td>
-    <td valign="top" class="tableb tableb_alternate"></td>
-  </tr>
-  <tr>
     <td valign="top" class="tableb"><strong>pic_rating</strong></td>
     <td valign="top" class="tableb">Integer</td>
     <td valign="top" class="tableb">The value represents the current average rating of the file. This allows Coppermine to track the average rating without having to store all ratings ever made. Divide this number by 2000 to get a rating out of 5. See <i>ratepic.php</i> for how the value is calculated.</td>
