@@ -355,7 +355,7 @@ EOT;
 function form_pic_info($text)
 {
     global $CURRENT_PIC, $THUMB_ROWSPAN, $CONFIG;
-    global $lang_byte_units, $lang_editpics_php, $lang_common, $loop_counter, $row_style_class, $icon_array;
+    global $lang_byte_units, $lang_editpics_php, $lang_common, $loop_counter, $row_style_class, $icon_array, $cpg_udb;
 
     if (!is_movie($CURRENT_PIC['filename'])) {
         $pic_info = sprintf($lang_editpics_php['pic_info_str'], $CURRENT_PIC['pwidth'], $CURRENT_PIC['pheight'], ($CURRENT_PIC['filesize'] >> 10), $CURRENT_PIC['hits'], $CURRENT_PIC['votes']);
@@ -364,8 +364,8 @@ function form_pic_info($text)
     }
 
     if (UPLOAD_APPROVAL_MODE) {
-        if ($CURRENT_PIC['owner_name']) {
-            $pic_info .= ' - <a href ="profile.php?uid='.$CURRENT_PIC['owner_id'].'" target="_blank">'.$CURRENT_PIC['owner_name'].'</a>';
+        if ($CURRENT_PIC['owner_id']) {
+            $pic_info .= ' - <a href="profile.php?uid=' . $CURRENT_PIC['owner_id'] . '">' . $cpg_udb->get_user_name($CURRENT_PIC['owner_id']) . '</a>';
         }
     }
 
