@@ -409,3 +409,5 @@ INSERT INTO CPG_config VALUES ('performance_page_query_time', '0');
 INSERT INTO CPG_config VALUES ('performance_page_query_count', '0');
 
 INSERT INTO CPG_config VALUES ('rate_own_files', '0');
+
+ALTER TABLE `CPG_pictures` DROP `owner_name`;
