@@ -73,7 +73,7 @@ if ($superCage->get->keyExists('album')) {
 if ($superCage->get->keyExists('search')) {
 
     // find out if a parameter has been submitted at all
-    $allowed = array('title', 'caption', 'keywords', 'owner_name', 'filename', 'pic_raw_ip', 'pic_hdr_ip', 'user1', 'user2', 'user3', 'user4');
+    $allowed = array('title', 'caption', 'keywords', 'filename', 'pic_raw_ip', 'pic_hdr_ip', 'user1', 'user2', 'user3', 'user4');
 
     foreach ($allowed as $key) {
         if ($superCage->get->keyExists($key)) {
